syntax = "proto3";

package message;
option go_package = ".;message";

import "google/api/annotations.proto";
import "orderModel.proto";


service OrderService {
    rpc GetOrder(OrderRequest) returns (OrderInfo) {
        option (google.api.http) = {
            get: "v1/order/{OrderId}"
        };
    }

    rpc GetOrderList(OrderSize) returns (OrderInfoList);

    rpc NewOrder(OrderData) returns (OrderResponse);
}